# docs/swagger.yml
@@ -3,9 +3,6 @@ info:
   title: SwapTime Imager
   description: Imager server that stores images by categories.
   version: 1.0.0
-servers:
-- url: http://localhost:8080
-  description: Development server
 paths:
   /api/v1/categories:
     get:
@@ -61,7 +58,7 @@ paths:
           description: Internal server error.
         "503":
           description: Service unavailable.
-  /api/v1/images/{id}:
+  /api/v1/images/{id}/{size}:
     get:
       tags: [public]
       summary: Get image data.
@@ -73,7 +70,7 @@ paths:
           format: uuid
         required: true
       - name: size
-        in: query
+        in: path
         schema:
           type: string
           example: 1920x1080
